Fixed overlap issue between caption and device labels

--- a/src/app/pages/system/viewenclosure/enclosure-disks/enclosure-disks.component.css
+++ b/src/app/pages/system/viewenclosure/enclosure-disks/enclosure-disks.component.css
@@ -195,6 +195,7 @@ nav.view-nav-bar{
   bottom:20px;
   text-align:center;
   opacity:0.5;
+  z-index:2;
 }
 
 
